# VLM-BehAV-Nav

./: .gitignore  README.md  main.py  pyproject.toml  run.sh  tmp.txt  问题.md
Akeman-Behav/VLM/: instruction-to-behavioral-costs.py  landmark3.py  landmark_data.json
Akeman-Behav/instruction-decomposition/: instruction.py
Akeman-Behav/landmark-tracking/: landmark.py  landmark2.py  landmark3.py
Akeman-Behav/planning/: behav-planning.py
BeHav/: behav_planner.py  instruction_processor.py  landmark_vision.py  main.py  pyproject.toml  ros_interface.py  run.sh  run_ros_planning.sh  run_without_instruction_process.sh
BeHav/script/: batch_evaluate_instructions.py  download_fastsam.py  edit_and_plot_exp2.py  exp1_cmd_vel_monitor.py  exp2_smoothness_monitor.py  plot_exp1.py  plot_exp2_independent.py  publish_image_map.py  save_reference_img.py  simulate_exp2_and_plot.py  take_photo.py  test_instruction.py  test_instructions.txt  test_map_subscriber.py  test_planning.py  test_vision.py  test_vision_img.py  test_vision_raw.py  test_vlm_speed.py  测试记录.txt  (+2 more)
farplanner/: callbacks.py  far_types.py  far_waypoint_planner.py  geometry.py  grid_search.py  grid_utils.py  polygon_visibility.py  publishers.py  waypoint_logic.py
localplanner/: ackermann_mpc_tracker.py  arbiter.py  callbacks.py  group_selector.py  local_rollout_selector.py  local_types.py  path_math.py  publishers.py  rollout_library.py  safety.py
map/: launch_tita_mapping.sh
robot_yang/: start.sh
scripts/: img_publisher.py  run_img_publisher.sh
tracker/: README.md  obs模板.json  pyproject.toml  tracker.py
(+93 files in other folders)
