[project]
name = "vlm-behav-nav"
version = "0.1.0"
description = "VLM-BehAV-Nav unified environment dependencies"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai",
    "python-dotenv",
    "numpy<2",
    "requests",
    "opencv-python",
    "matplotlib",
    "Pillow",
    "ultralytics>=8.4.46",
    "pandas>=2.3.3",
    "httpx[socks]>=0.28.1",
    "torch",
    "transformers",
]
